cmake_minimum_required(VERSION 2.6)
project(FirstSteps)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
find_package(SFML  REQUIRED system window graphics network audio)
add_executable(test_result main.cpp)

if(SFML_FOUND)
  include_directories(${SFML_INCLUDE_DIR})
  target_link_libraries(test_result ${SFML_LIBRARIES})
endif()
